# phentrieve

./: .coverage  .dockerignore  .env  .env.docker.example  .env.docker.template  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BRANCH_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLI_PERFORMANCE_OPTIMIZATION_PHASE2.md  Dockerfile.api  IMPLEMENTATION-SUMMARY.md  Makefile  PR-138-CODE-REVIEW.md  README.md  SCRIPTS-AUDIT.md  SECURITY.md  benchmark_comparison.csv  benchmark_rag.py  benchmark_results.csv  benchmark_summary.txt  build_index.py  check_cuda.py  cli-testing-plan.md  compare_dense_vs_reranked.py  coverage.xml  debug_chunking.py  docker-compose.dev.yml  docker-compose.security.yml  docker-compose.test.yml  docker-compose.yml  docker-login.sh  download_hpo.py  extract_hpo_terms.py  german_hpo_rag.py  hpo_similarity.py  initialize_docker.ps1  (+19 more)
.github/: dependabot.yml
.github/workflows/: build-data-bundles.yml  ci.yml  codeql.yml  deploy-docs.yml  docker-publish.yml  security.yml
.planning/: README.md  STATUS.md
.planning/active/: 2026-04-16-llm-cli-grounded-whole-note-implementation-plan.md  2026-04-18-openai-structured-output-provider-implementation-plan.md  2026-04-22-full-text-query-ui-correction-implementation-plan.md  2026-04-23-pr-229-review-followup-modularization-implementation-plan.md  2026-04-24-ontology-aware-benchmark-command-option-plan.md  2026-04-29-modern-mcp-implementation-plan.md  2026-04-30-codebase-health-remediation-plan.md  2026-04-30-local-browser-pii-guard-implementation-plan.md  2026-04-30-untitled-local-person-name-pii-implementation-plan.md  2026-06-13-fulltext-annotation-curation-plan.md  2026-07-03-extraction-contract-v2-phase-0-1-plan.md  2026-07-03-extraction-contract-v2-phase-2-plan.md  2026-07-15-hpo-data-release-separation-plan.md  2026-07-20-benchmark-identity-review-remediation-plan.md  2026-07-20-benchmark-resume-integrity-plan.md
.planning/analysis/: 2026-04-16-llm-lean-v1-comparative-review.md  2026-04-16-llm-pipeline-expert-review.md  2026-04-17-llm-multi-provider-adoption-research.md  2026-04-23-planning-audit.md  2026-04-29-modern-mcp-verification.md  2026-04-30-codebase-health-review.md  2026-05-22-hpo-data-release-runbook.md  2026-05-22-hpo-v2026-02-16-benchmark-comparison.md  2026-05-23-phentrieve-rag-prompting-literature-report.md  2026-05-25-llm-evidence-validation-enriched-mapping-pr-regression.md  2026-06-13-fulltext-annotation-curation-verification.md  2026-06-13-mcp-gen3-modernization-verification.md  2026-06-14-mcp-baseline.md  2026-06-14-mcp-stabilization-plan.md  2026-06-14-mcp-stabilization-verification.md  2026-06-14-phentrieve-mcp-assessment-remediation-verification.md  2026-06-14-phentrieve-mcp-assessment.md  2026-06-14-phentrieve-mcp-evaluation.md  2026-06-14-phentrieve-mcp-hardening-verification.md  CODEBASE-MAINTAINABILITY-REVIEW-2026-04-15.md  MULTI-VECTOR-DUPLICATE-RESULTS-INVESTIGATION.md  NEGATION-DETECTION-ANALYSIS.md
.planning/archived/: 2026-04-15-llm-auth-quota-benchmark-implementation-plan.md  2026-04-15-maintainability-quick-wins-design.md  2026-04-16-llm-cli-grounded-whole-note-design.md  2026-04-16-llm-lean-v1-comparative-review.md  2026-04-16-llm-pipeline-expert-review.md  2026-04-17-llm-multi-provider-python-cli-design.md  2026-04-17-ontology-embedding-fidelity-design.md  2026-04-19-phenopacket-v2-and-annotation-sidecar-design.md  2026-04-21-unified-full-text-annotation-workspace-design.md  2026-04-22-full-text-query-mode-ui-correction-design.md  2026-04-23-analysis-audit.md  2026-04-23-pr-229-review-followup-modularization-design.md  2026-04-25-adaptive-rechunking-spec.md  2026-04-29-eu-ai-act-research-use-review.md  2026-04-30-prompt-injection-guards-design.md  2026-04-30-untitled-local-person-name-pii-design.md  2026-05-25-llm-evidence-validation-enriched-mapping-design.md  CRITICAL-PERFORMANCE-FIXES.md.superseded  (+2 more)
api/: .dockleignore  .gitignore  Dockerfile  Dockerfile.secure  README.md  api.yaml  api.yaml.template  config.py  dependencies.py  docker-entrypoint.sh  llm_quota.py  main.py  pyproject.toml  research_use.py  run_api_local.py  version.py
docs/: DOCKER-DEPLOYMENT.md  PHASE-1-COMPLETION.md  PHASE-2-STRATEGY.md  TESTING-BASELINE.md  faq.md  index.md  mcp-server.md
examples/: run_full_text_evaluation.py
frontend/: .dockerignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  nginx.conf.secure  package-lock.json  package.json  postcss.config.cjs  postcss.config.js  vite-icon-optimizer.js  vite.config.js
multilingual_hpo_rag/: .gitignore  README.md  requirements.txt
original_code_backup/: download_hpo.py  examine_hpo_data.py  german_hpo_rag.py
phentrieve/: __init__.py  __main__.py  assertion_vocab.py  cli.py  config.py  embeddings.py  fix_bar_colors.py  hr_ontsim_model_colors.py  model_colored_charts.py  profiles.py  utils.py
plan/: DOCKER-REFACTORING-PLAN.md  DOCKER-TEST-SUITE-PLAN.md  MASTER-PLAN.md  PR-113-ISSUE-87-VERIFICATION-REPORT.md  PREBUILT-DATA-DISTRIBUTION.md  README.md  STATUS.md  TESTING-MODERNIZATION-PLAN.md  baselines.md  current-structure.md  phase-0-preparation.md  phase-1-ruff-migration.md  requirements-baseline.txt  ruff-pilot-report.md  tooling-modernization-critique.md  training-schedule.md  type-annotation-fixes.md  uv-pilot-report.md
scripts/: ANNOTATION-CHUNKING.md  PHENOBERT-DOWNLOAD-GUIDE.md  README.md  analyze_embedding_ontology.py  annotation_chunker.py  build_data_release.py  ci-python-compat.sh  convert_phenobert_data.py  convert_raghpo_paper_data.py  generate_chunking_variants.py  migrate_unittest_to_pytest.py  phenobert_converter.py  raghpo_paper_converter.py  render_llm_trace_graph.py  rollback-phase-1.sh  rollback-phase-2.sh  run_llm_model_benchmarks.py  setup-docker-volumes.sh  setup-local-dev.sh  shared_utils.py  validate_config_sync.py  verify_data_release.py
tests/: conftest.py  test_assertion_detection.py  test_basic_chunkers.py  test_chunking_pipeline_integration.py  test_resource_loader.py  test_semantic_metrics.py  test_sliding_window_chunker.py
(+1465 files in other folders)
